--- a/index.html
+++ b/index.html
@@ -4,9 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test GitHub</title>
+    <link rel="shourtcut icon" href="imagens/favicon.png" type="image/jpg">
+    <title>Exercício Proposto 2</title>
 </head>
 <body>
-    <p>Test</p>
+    <header>
+        <img src="imagens/microsoft-logo.png" alt="Logo Microsoft" width="500">
+    </header>
+    <h1>Carrinho de Compras</h1>
+    <table border="1">
+        <thead>
+            <th colspan="5">Lista de Produtos</th>
+        </thead>
+
+        <thead>
+            <th>#</th>
+            <th>Nome</th>
+            <th>Valor</th>
+            <th>Qtd</th>
+            <th>Total</th>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Notebook</td>
+                <td>R$ 1.200,00</td>
+                <td>2</td>
+                <td>R$ 2.400,00</td>
+            </tr>
+
+            <tr>
+                <td>2</td>
+                <td>Teclado</td>
+                <td>R$ 50,00</td>
+                <td>3</td>
+                <td>R$ 150,00</td>
+            </tr>
+
+            <tr>
+                <td>3</td>
+                <td>Mouse</td>
+                <td>R$ 25,00</td>
+                <td>4</td>
+                <td>R$ 100,00</td>
+            </tr>
+
+            <tr>
+                <td>4</td>
+                <td>Carregador</td>
+                <td>R$ 120,00</td>
+                <td>1</td>
+                <td>R$ 120,00</td>
+            </tr>
+
+            <tr>
+                <td colspan="4">Total da Compra</td>
+                <td>R$ 2.270,00</td>
+            </tr>
+
+        </tbody>  
+        
+    </table>
+    <br>
+    <a href="pagamento.html">Ir para o Pagamento</a>
+    <br><br>
+    <address>
+        Rua do Sol, 100 - Centro, Surubim - PE.
+    </address>
+
 </body>
 </html>
