--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
             </tr>
 
         </tbody>  
-        
+
     </table>
     <br>
-    <a href="pagamento.html">Ir para o Pagamento</a>
+    <a href="pagamento.html" title="Clique para realizar o pagamento e finalizar sua compra">Ir para o Pagamento</a>
     <br><br>
-    <address>
+    <footer>
+        <address>
         Rua do Sol, 100 - Centro, Surubim - PE.
-    </address>
-
+        </address>
+    </footer>
 </body>
 </html>
