--- a/pagamento.html
+++ b/pagamento.html
@@ -13,13 +13,16 @@
         <img src="imagens/microsoft-logo.png" alt="Logo Microsoft" width="500">
     </header>
     <br>
-    <a href="index.html">Voltar ao Carrinho</a>
+    <a href="index.html" title="Voltar ao Carrinho e adicionar mais produtos">Voltar ao Carrinho</a>
 
     <h1>Pagamento</h1>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti magnam neque, quasi soluta praesentium nobis ex aspernatur saepe sint adipisci molestias doloribus odit porro quae eligendi, dolores quidem, facere eveniet!</p>
     <br><br>
     <img src="imagens/cartoes-credito.png" alt="operadoras do cartão">
-    <address>Rua do Sol, 100 - Centro, Surubim - PE.</address>
+    <footer>
+        <address>Rua do Sol, 100 - Centro, Surubim - PE.</address>
+    </footer>
+    
 </body>
 </html>
